--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/core": "^7.13.0",
         "@craco/craco": "^6.1.2",
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
@@ -28,13 +29,14 @@
         "formik": "^2.2.6",
         "formik-material-ui": "^3.0.1",
         "jwt-decode": "^3.1.2",
-        "react": "^17.0.1",
+        "react": "^17.0.2",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
-        "react-dom": "^17.0.1",
+        "react-dom": "^17.0.2",
         "react-is-mounted-hook": "^1.1.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
+        "react-smooth": "^2.0.1",
         "recharts": "^2.0.8",
         "socket.io-client": "^4.3.2",
         "typescript": "~4.0.0",
@@ -66,6 +68,7 @@
         ]
     },
     "devDependencies": {
+        "npm-install-peers": "^1.2.2",
         "prettier": "2.3.0"
     }
 }
