--- a/web/package.json
+++ b/web/package.json
@@ -3,15 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@craco/craco": "^6.1.2",
-        "@emotion/react": "^11.4.1",
-        "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^4.11.3",
-        "@material-ui/data-grid": "^4.0.0-alpha.20",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "^4.0.0-alpha.57",
-        "@mui/icons-material": "^5.0.4",
-        "@mui/material": "^5.0.4",
+        "3": "^2.1.0",
+        "-": "0.0.1",
+        "@babel/core": "^7.18.10",
+        "@craco/craco": "^6.4.5",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/data-grid": "^4.0.0-alpha.37",
+        "@material-ui/icons": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.61",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.9.3",
+        "@mui/x-data-grid": "^4.0.2",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
@@ -21,17 +25,20 @@
         "@types/react-csv": "^1.1.1",
         "@types/react-dom": "^16.9.10",
         "@types/react-router-dom": "^5.1.7",
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^4.6.2",
         "browser-image-compression": "^1.0.17",
+        "browserslist": "^4.21.3",
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
         "formik": "^2.2.6",
         "formik-material-ui": "^3.0.1",
+        "jquery": "^1.9.1",
         "jwt-decode": "^3.1.2",
-        "react": "^17.0.1",
+        "popper.js": "^1.16.1",
+        "react": "^17.0.2",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
-        "react-dom": "^17.0.1",
+        "react-dom": "^17.0.2",
         "react-is-mounted-hook": "^1.1.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
