--- a/web/package.json
+++ b/web/package.json
@@ -3,45 +3,50 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "^7.13.0",
-        "@craco/craco": "^6.1.2",
-        "@emotion/react": "^11.4.1",
-        "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^4.11.3",
-        "@material-ui/data-grid": "^4.0.0-alpha.20",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "^4.0.0-alpha.57",
-        "@mui/icons-material": "^5.0.4",
-        "@mui/material": "^5.0.4",
-        "@testing-library/jest-dom": "^5.11.9",
-        "@testing-library/react": "^11.2.3",
-        "@testing-library/user-event": "^12.6.0",
-        "@types/jest": "^26.0.20",
-        "@types/node": "^12.19.14",
-        "@types/react": "^16.14.2",
-        "@types/react-csv": "^1.1.1",
-        "@types/react-dom": "^16.9.10",
-        "@types/react-router-dom": "^5.1.7",
-        "bootstrap": "^4.5.3",
+        "3": "^2.1.0",
+        "-": "0.0.1",
+        "@babel/core": "^7.18.10",
+        "@craco/craco": "^6.4.5",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/data-grid": "^4.0.0-alpha.37",
+        "@material-ui/icons": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.61",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.10.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^12.20.55",
+        "@types/react": "^16.14.30",
+        "@types/react-csv": "^1.1.3",
+        "@types/react-dom": "^16.9.16",
+        "@types/react-router-dom": "^5.3.3",
+        "bootstrap": "^4.6.2",
         "browser-image-compression": "^1.0.17",
+        "browserslist": "^4.21.3",
         "craco-babel-loader": "^0.1.4",
         "expo-localization": "^10.2.0",
-        "formik": "^2.2.6",
+        "formik": "^2.2.9",
         "formik-material-ui": "^3.0.1",
+        "jquery": "^1.12.4",
         "jwt-decode": "^3.1.2",
+        "popper.js": "^1.16.1",
         "react": "^17.0.2",
-        "react-cropper": "^2.1.7",
-        "react-csv": "^2.0.3",
+        "react-cropper": "^2.1.8",
+        "react-csv": "^2.2.2",
         "react-dom": "^17.0.2",
         "react-is-mounted-hook": "^1.1.2",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^5.3.3",
         "react-scripts": "4.0.1",
         "react-smooth": "^2.0.1",
-        "recharts": "^2.0.8",
-        "socket.io-client": "^4.3.2",
+        "recharts": "^2.1.13",
+        "socket.io-client": "^4.5.1",
         "typescript": "~4.0.0",
         "web-vitals": "^0.2.4",
-        "yup": "^0.32.8"
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "craco start",
