--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@cbr/common": "file:cbr-common-1.0.0.tgz",
-    "@expo/vector-icons": "^12.0.0",
+    "@expo/vector-icons": "^13.0.0",
     "@formatjs/intl-datetimeformat": "^4.1.6",
     "@formatjs/intl-displaynames": "^5.1.6",
     "@formatjs/intl-getcanonicallocales": "^1.7.1",
@@ -20,42 +20,42 @@
     "@formatjs/intl-relativetimeformat": "^9.1.7",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@nozbe/watermelondb": "^0.23.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "6.0.2",
-    "@react-native-picker/picker": "2.1.0",
+    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@types/react-native-vector-icons": "^6.4.6",
     "core-js": "^3.15.2",
     "dotenv": "^10.0.0",
-    "expo": "^43.0.0",
-    "expo-background-fetch": "~10.0.3",
+    "expo": "^47.0.0",
+    "expo-background-fetch": "~11.0.1",
     "expo-cli": "^4.9.0",
-    "expo-image-manipulator": "~10.1.2",
-    "expo-image-picker": "~11.0.3",
-    "expo-localization": "~11.0.0",
-    "expo-splash-screen": "~0.13.5",
-    "expo-status-bar": "~1.1.0",
-    "expo-task-manager": "~10.0.3",
-    "expo-updates": "~0.10.15",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
+    "expo-localization": "~14.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-task-manager": "~11.0.1",
+    "expo-updates": "~0.15.6",
     "formik": "^2.2.9",
     "in": "^0.19.0",
     "mobile": "^0.0.1",
     "native-base": "^2.15.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-is-mounted-hook": "^1.1.1",
-    "react-native": "0.64.3",
+    "react-native": "0.70.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-checkbox-selection": "^1.1.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.1.21",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.1",
@@ -68,15 +68,14 @@
     "react-native-paper-dates": "^0.4.6",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress-steps": "^1.3.4",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-select-multiple": "^2.1.0",
     "react-native-skeleton-placeholder": "^5.0.0",
-    "react-native-svg": "12.1.1",
-    "react-native-unimodules": "~0.15.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "react-native-wizard": "^2.1.0",
     "react-native-woodpicker": "^0.3.7",
     "react-navigation": "^4.4.4",
@@ -89,19 +88,19 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-decorators": "^7.15.8",
     "@expo/config-types": "^41.0.0",
     "@types/node": "^15.12.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "@types/react-native-material-dropdown": "^0.11.4",
     "@types/react-router-dom": "^5.1.7",
     "better-sqlite3": "^7.4.4",
     "prettier": "2.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true,
   "name": "mobile",
