--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: "3.9"
 services:
+  fluentbit:
+    container_name: cbr_fluentbit
+    image: fluent/fluent-bit:latest
+    volumes:
+      - ./fluentbit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./fluentbit/logs:/output
+      - django_logs:/logs/django:ro
+      - fluentbit_logs_db:/persist
+    ports:
+      - "24224:24224"
+    environment:
+      GRAFANA_API_KEY: ${GRAFANA_API_KEY}
+      PROMETHEUS_API_KEY: ${GRAFANA_API_KEY}
   django:
     container_name: cbr_django
     build:
@@ -12,9 +25,17 @@ services:
       - SECRET_KEY=${SECRET_KEY}
     depends_on:
       - postgres
+    volumes:
+      - django_logs:/var/log
   postgres:
     container_name: cbr_postgres
     image: postgres:13.1-alpine
+    logging:
+      driver: fluentd
+      options:
+          tag: docker.{{.Name}}.{{.ID}}
+          fluentd-async: "true"
+          fluentd-address: tcp://localhost:24224
     environment:
       - POSTGRES_DB=cbr
       - POSTGRES_USER=${POSTGRES_USER}
@@ -24,3 +45,5 @@ services:
 
 volumes:
   cbr_postgres_data:
+  django_logs:
+  fluentbit_logs_db:
