--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,15 @@
+{
+    # Global caddy configuration for logging
+    log caddy-runtime {
+        output file /var/log/runtime.log {
+            roll_keep_for 60d
+        }
+        format json
+        level INFO
+        exclude http.log.access
+    }
+}
+
 {$DOMAIN} {
     encode gzip
 
@@ -21,5 +33,13 @@
 
         # If there is a 404, serve index.html (required for React)
         try_files {path} index.html
+    }
+
+    log {
+	    output file /var/log/access.log {
+            roll_keep_for 60d
+        }
+        format json
+        level INFO
     }
 }
