--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -32,7 +32,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - cbr_caddy_data:/data
+      - cbr_caddy_logs:/var/log
 
 volumes:
   cbr_caddy_data:
