--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,7 +11,7 @@ django-filter==2.4.0
 django-downloadview==2.3.0
 django-rest-framework-condition==0.1.1
 django-cleanup==5.2.0
-
+python-json-logger==2.0.4
 # Dependencies for SocketIO
 enum-compat==0.0.3
 eventlet==0.30.0
