--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,7 +3,7 @@
         "node": ">=20 <21"
     },
     "scripts": {
-        "start": "expo run:android",
+        "start": "expo start --dev-client",
         "start-with-target": "expo run:android --port 8088 --device",
         "prebuild": "expo prebuild --clean --platform android",
         "build-apk": "node build.js",
@@ -79,6 +79,7 @@
         "expo-background-fetch": "~13.1.6",
         "expo-build-properties": "~0.14.8",
         "expo-constants": "~17.1.7",
+        "expo-dev-client": "~5.2.4",
         "expo-font": "~13.3.2",
         "expo-image-manipulator": "~13.1.7",
         "expo-image-picker": "~16.1.4",
@@ -114,7 +115,7 @@
         "react-native-web": "^0.20.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^5.2.0",
-        "socket.io-client": "^4.3.2",
+        "socket.io-client": "^4.8.1",
         "victory-native": "^36.3.1",
         "yup": "^0.32.9"
     },
