--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,7 @@
     "dependencies": {
         "@babel/runtime": "^7.25.7",
         "@cbr/common": "file:cbr-common-1.0.0.tgz",
-        "@expo/vector-icons": "^14.0.2",
+        "@expo/vector-icons": "14.0.2",
         "@formatjs/intl-datetimeformat": "^4.1.6",
         "@formatjs/intl-displaynames": "^5.1.6",
         "@formatjs/intl-getcanonicallocales": "^1.7.1",
@@ -32,9 +32,9 @@
         "@formatjs/intl-relativetimeformat": "^9.1.7",
         "@gorhom/bottom-sheet": "^4.1.3",
         "@nozbe/watermelondb": "^0.27.1",
-        "@react-native-async-storage/async-storage": "1.23.1",
-        "@react-native-community/datetimepicker": "8.0.1",
-        "@react-native-community/netinfo": "11.3.1",
+        "@react-native-async-storage/async-storage": "^2.0.0",
+        "@react-native-community/datetimepicker": "^8.0.0",
+        "@react-native-community/netinfo": "^11.3.3",
         "@react-native-picker/picker": "2.7.5",
         "@react-navigation/material-bottom-tabs": "^6.2.29",
         "@react-navigation/native": "^6.0.2",
@@ -45,7 +45,7 @@
         "async-mutex": "0.5.0",
         "events": "^3.3.0",
         "expo": "^52.0.0",
-        "expo-application": "^6.0.2",
+        "expo-application": "6.0.2",
         "expo-background-fetch": "~12.0.1",
         "expo-build-properties": "~0.12.5",
         "expo-constants": "~16.0.2",
@@ -58,30 +58,30 @@
         "expo-splash-screen": "~0.27.5",
         "expo-status-bar": "~1.12.1",
         "expo-system-ui": "~3.0.7",
-        "expo-task-manager": "~11.8.2",
-        "expo-updates": "~0.25.28",
-        "expo-web-browser": "~13.0.3",
+        "expo-task-manager": "~12.0.6",
+        "expo-updates": "~0.27.4",
+        "expo-web-browser": "~14.0.2",
         "formik": "^2.2.9",
         "i18next": "^23.16.2",
         "in": "^0.19.0",
         "mobile": "^0.0.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "18.3.1",
+        "react-dom": "^18.3.1",
         "react-i18next": "^15.0.0",
-        "react-native": "0.74.5",
+        "react-native": "^0.76.0",
         "react-native-background-timer": "^2.4.1",
         "react-native-dotenv": "^3.2.0",
         "react-native-elements": "^3.4.3",
-        "react-native-gesture-handler": "~2.16.1",
+        "react-native-gesture-handler": "~2.20.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
         "react-native-multiple-select": "^0.5.6",
         "react-native-multiple-select-list": "^1.0.4",
         "react-native-paper": "^5.12.4",
         "react-native-progress-steps": "^2.0.3",
-        "react-native-reanimated": "~3.10.1",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1",
-        "react-native-svg": "15.2.0",
+        "react-native-reanimated": "~3.16.1",
+        "react-native-safe-area-context": "^4.12.0",
+        "react-native-screens": ">=4.0 <4.5",
+        "react-native-svg": ">=15.8.0 <15.13.0",
         "react-native-web": "~0.19.10",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.2.0",
@@ -105,12 +105,12 @@
         "expo-modules-autolinking": "~2.0.0",
         "jest": "^29.2.1",
         "jest-expo": "~51.0.3",
-        "metro": "^0.81.5",
-        "metro-config": "^0.81.5",
-        "metro-resolver": "^0.81.5",
+        "metro": "^0.81.0",
+        "metro-config": "^0.81.0",
+        "metro-resolver": "^0.81.0",
         "prettier": "2.3.0",
         "react-native-vector-icons": "^8.1.0",
-        "react-test-renderer": "18.2.0",
+        "react-test-renderer": "18.3.1",
         "typescript": "^5.6.2"
     },
     "private": true,
