--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,7 @@
     "dependencies": {
         "@babel/runtime": "^7.25.7",
         "@cbr/common": "file:cbr-common-1.0.0.tgz",
-        "@expo/vector-icons": "14.0.2",
+        "@expo/vector-icons": "^14.0.2",
         "@formatjs/intl-datetimeformat": "^4.1.6",
         "@formatjs/intl-displaynames": "^5.1.6",
         "@formatjs/intl-getcanonicallocales": "^1.7.1",
@@ -89,6 +89,10 @@
         "socket.io-client": "^4.3.2",
         "victory-native": "^36.3.1",
         "yup": "^0.32.9"
+    },
+    "overrides": {
+        "expo-task-manager": "~12.0.6",
+        "react-native-vector-icons": "^8.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
