--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,7 @@
     "dependencies": {
         "@babel/runtime": "^7.25.7",
         "@cbr/common": "file:cbr-common-1.0.0.tgz",
-        "@expo/vector-icons": "^14.0.2",
+        "@expo/vector-icons": "~14.0.4",
         "@formatjs/intl-datetimeformat": "^4.1.6",
         "@formatjs/intl-displaynames": "^5.1.6",
         "@formatjs/intl-getcanonicallocales": "^1.7.1",
@@ -49,7 +49,7 @@
         "expo-background-fetch": "~12.0.1",
         "expo-build-properties": "~0.12.5",
         "expo-constants": "~16.0.2",
-        "expo-font": "~12.0.9",
+        "expo-font": "~13.0.4",
         "expo-image-manipulator": "~12.0.5",
         "expo-image-picker": "~15.1.0",
         "expo-linking": "~6.3.1",
